new real-emission amplitudes provided by VBFNLO for VBF_HJJJ code
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3514 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/VBF_HJJJ/Docs/manual.tex
+++ b/VBF_HJJJ/Docs/manual.tex
@@ -88,7 +88,7 @@
 \maketitle
 %
 \noindent
-The {\tt VBF\_HJJJ} program in the \POWHEGBOXV{} is an implementation of Higgs boson production via vector-boson fusion in association with three jets. Details of the calculation are described in Ref.~\cite{JSZ}. If you use this program, please quote Refs.~\cite{JSZ,Figy:2007kv,Alioli:2010xd}.
+The {\tt VBF\_HJJJ} program in the \POWHEGBOXV{} is an implementation of Higgs boson production via vector-boson fusion in association with three jets. Details of the calculation are described in Ref.~\cite{JSZ}. If you use this program, please quote Refs.~\cite{JSZ,Figy:2007kv,Arnold:2008rz,Alioli:2010xd}.
 %\\[2ex]
 %
 \section*{Running the program}
@@ -141,18 +141,28 @@ The events that are ultimately generated in Les Houches format can be processed 
 %
 \begin{thebibliography}{99}
 
-\bibitem{JSZ} B.~J\"ager, F.~Schissler, D.~Zeppenfeld {\em Parton-shower effects on Higgs boson production via vector-boson fusion in association with three jets}, arXiv:1405.6950 [hep-ph]. 
+\bibitem{JSZ} B.~J\"ager, F.~Schissler, and D.~Zeppenfeld {\em Parton-shower effects on Higgs boson production via vector-boson fusion in association with three jets}, 
+JHEP {\bf 1407} (2014) 125. 
+%arXiv:1405.6950 [hep-ph]. 
 
 \bibitem{Figy:2007kv}
-  T.~Figy, V.~Hankele and D.~Zeppenfeld,
+  T.~Figy, V.~Hankele, and D.~Zeppenfeld,
   {\em Next-to-leading order QCD corrections to Higgs plus three jet production in vector-boson fusion},
-  JHEP {\bf 0802} (2008) 076
-  [arXiv:0710.5621 [hep-ph]].
+  JHEP {\bf 0802} (2008) 076.
+%  [arXiv:0710.5621 [hep-ph]].
+  
+\bibitem{Arnold:2008rz}
+  K.~Arnold {\it et al.},
+ {\em VBFNLO: A Parton level Monte Carlo for processes with electroweak bosons},
+  Comput.\ Phys.\ Commun.\  {\bf 180} (2009) 1661;  
+   J.~Baglio {\it et al.},
+  {\em VBFNLO: A Parton Level Monte Carlo for Processes with Electroweak Bosons -- Manual for Version 2.7.0},
+  arXiv:1107.4038 [hep-ph].
 
-\bibitem{Alioli:2010xd} S.~Alioli, P.~Nason, C.~Oleari and E. Re, {\em
+
+\bibitem{Alioli:2010xd} S.~Alioli, P.~Nason, C.~Oleari, and E. Re, {\em
     A general framework for implementing NLO calculations in shower
-    Monte Carlo programs: the POWHEG BOX}, JHEP {\bf 1006} (2010)
-  043  [arXiv:1002.2581 [hep-ph]].
+    Monte Carlo programs: the POWHEG BOX}, JHEP {\bf 1006} (2010)~043. % [arXiv:1002.2581 [hep-ph]].
 
 \end{thebibliography}
 %%%%%%%%%%%%%%%%%%
