references updated for VBF HJJJ
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3516 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/VBF_HJJJ/Docs/manual.tex
+++ b/VBF_HJJJ/Docs/manual.tex
@@ -155,10 +155,11 @@ JHEP {\bf 1407} (2014) 125.
   K.~Arnold {\it et al.},
  {\em VBFNLO: A Parton level Monte Carlo for processes with electroweak bosons},
   Comput.\ Phys.\ Commun.\  {\bf 180} (2009) 1661;  
-   J.~Baglio {\it et al.},
-  {\em VBFNLO: A Parton Level Monte Carlo for Processes with Electroweak Bosons -- Manual for Version 2.7.0},
-  arXiv:1107.4038 [hep-ph].
-
+%   J.~Baglio {\it et al.},  
+% {\em VBFNLO: A Parton Level Monte Carlo for Processes with Electroweak Bosons -- Manual for Version 2.7.0}, arXiv:1107.4038 [hep-ph].
+J.~Baglio {\it et al.},
+  {\em Release Note - VBFNLO~2.7.0},
+  arXiv:1404.3940 [hep-ph].
 
 \bibitem{Alioli:2010xd} S.~Alioli, P.~Nason, C.~Oleari, and E. Re, {\em
     A general framework for implementing NLO calculations in shower
