in bbH comments are added to explain the code is designed only for a narrow light Higgs boson
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3589 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/bbH/Docs/manual.tex
+++ b/bbH/Docs/manual.tex
@@ -83,7 +83,11 @@
 \maketitle
 %
 \noindent
-The {\tt bbH} program in the \POWHEGBOXV{} is an implementation of Higgs boson production in association with bottom quarks. Details of the calculation are described in Ref.~\cite{JRW}. If you use this program, please quote Refs.~\cite{JRW,Dawson:2003kb,Dawson:2005vi,Alioli:2010xd}.
+The {\tt bbH} program in the \POWHEGBOXV{} is an implementation of Higgs boson production in association with bottom quarks. Details of the calculation are described in Ref.~\cite{JRW}. 
+%
+The code is applicable for values of the mass and width of the Higgs boson where its decays can be treated using a narrow-width approximation, and off-shell effects are small.
+%
+If you use this program, please quote Refs.~\cite{JRW,Dawson:2003kb,Dawson:2005vi,Alioli:2010xd}.
 %\\[2ex]
 %
 \section*{Running the program}
