in ttH comments are added to explain the code is designed only for a narrow light Higgs boson
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3590 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ttH/Docs/manual.tex
+++ b/ttH/Docs/manual.tex
@@ -83,7 +83,11 @@
 \maketitle
 %
 \noindent
-The {\tt ttH} program in the \POWHEGBOXV{} is an implementation of Higgs boson production in association a top quark pair. Details of the calculation are described in Ref.~\cite{HJRW}. If you use this program, please quote Refs.~\cite{HJRW,DORW,DJORW,Alioli:2010xd}.
+The {\tt ttH} program in the \POWHEGBOXV{} is an implementation of Higgs boson production in association a top quark pair. Details of the calculation are described in Ref.~\cite{HJRW}. 
+%
+The code is applicable for values of the mass and width of the Higgs boson where its decays can be treated using a narrow-width approximation, and off-shell effects are small. 
+%
+If you use this program, please quote Refs.~\cite{HJRW,DORW,DJORW,Alioli:2010xd}.
 %\\[2ex]
 %
 \section*{Running the program}
