--- a/ggHH/Docs/manual-BOX-HH.tex
+++ b/ggHH/Docs/manual-BOX-HH.tex
@@ -93,8 +93,8 @@ In this manual, we describe the \POWHEG{} implementation of Higgs
 boson pair production in gluon fusion at NLO QCD, as described in
 Ref.~\cite{Heinrich:2017kxx}, based on the calculation reported in
 Refs.~\cite{Borowka:2016ehy,Borowka:2016ypz}.  
-The variations of the trilinear Higgs boson coupling are based on Refs.~\cite{Buchalla:2018yce,VarLambda2019-arXivNumber}.
-Please cite Refs.~\cite{Heinrich:2017kxx,VarLambda2019-arXivNumber} if you use this program.
+The variations of the trilinear Higgs boson coupling are based on Refs.~\cite{Heinrich:2019bkc,Buchalla:2018yce}.
+Please cite Refs.~\cite{Heinrich:2019bkc,Heinrich:2017kxx} if you use this program.
 
 The code can be found under {\tt User-Processes-V2} in the {\tt ggHH} process-directory. 
 An example input card ({\tt powheg.input-save}) and a run script ({\tt run.sh}) 
@@ -233,6 +233,12 @@ Below is a list of potential issues:
 
 \begin{thebibliography}{10}
 
+\bibitem{Heinrich:2019bkc}
+  G.~Heinrich, S.~P.~Jones, M.~Kerner, G.~Luisoni and L.~Scyboz,
+  %``Probing the trilinear Higgs boson coupling in di-Higgs production at NLO QCD including parton shower effects,''
+  arXiv:1903.08137 [hep-ph].
+  %%CITATION = ARXIV:1903.08137;%%
+
   %\cite{Nason:2004rx}
 \bibitem{Nason:2004rx}
   P.~Nason,
@@ -271,13 +277,6 @@ Below is a list of potential issues:
 %  Eur.\ Phys.\ J.\ C {\bf 72} (2012) 1889
 %  [arXiv:1111.2034].
 
-%\cite{Cullen:2014yla}
-\bibitem{Cullen:2014yla}
-  G.~Cullen {\it et al.},
-  ``GoSam-2.0: a tool for automated one-loop calculations within the Standard Model and beyond,''
-  Eur.\ Phys.\ J.\ C {\bf 74} (2014) no.8,  3001
-  %doi:10.1140/epjc/s10052-014-3001-5
-  [arXiv:1404.7096 [hep-ph]].
 
 \bibitem{Heinrich:2017kxx}
   G.~Heinrich, S.~P.~Jones, M.~Kerner, G.~Luisoni and E.~Vryonidou,
@@ -302,6 +301,21 @@ Below is a list of potential issues:
 %  doi:10.1007/JHEP10(2016)107
   [arXiv:1608.04798 [hep-ph]].
 
+\bibitem{Buchalla:2018yce}
+  G.~Buchalla, M.~Capozi, A.~Celis, G.~Heinrich and L.~Scyboz,
+  ``Higgs boson pair production in non-linear Effective Field Theory with full $m_t$-dependence at NLO QCD,''
+  JHEP {\bf 1809} (2018) 057
+   [APS Physics {\bf 2018} (2018) 57]
+  [arXiv:1806.05162 [hep-ph]].
+  
+%\cite{Cullen:2014yla}
+\bibitem{Cullen:2014yla}
+  G.~Cullen {\it et al.},
+  ``GoSam-2.0: a tool for automated one-loop calculations within the Standard Model and beyond,''
+  Eur.\ Phys.\ J.\ C {\bf 74} (2014) no.8,  3001
+  %doi:10.1140/epjc/s10052-014-3001-5
+  [arXiv:1404.7096 [hep-ph]].
+
 %\cite{Alioli:2008tz}
 \bibitem{Alioli:2008tz}
   S.~Alioli, P.~Nason, C.~Oleari and E.~Re,
@@ -317,13 +331,7 @@ Below is a list of potential issues:
    Erratum: [JHEP {\bf 1002} (2010) 011]
   [arXiv:0907.4076].
   
-  \bibitem{Buchalla:2018yce}
-  G.~Buchalla, M.~Capozi, A.~Celis, G.~Heinrich and L.~Scyboz,
-  ``Higgs boson pair production in non-linear Effective Field Theory with full $m_t$-dependence at NLO QCD,''
-  JHEP {\bf 1809} (2018) 057
-   [APS Physics {\bf 2018} (2018) 57]
-  [arXiv:1806.05162 [hep-ph]].
-  
+ 
 \end{thebibliography}
 
 \end{document}
