--- a/h_bbg/doc/manual-h-bbg.tex
+++ b/h_bbg/doc/manual-h-bbg.tex
@@ -229,7 +229,7 @@ In order to perform the NNLO reweighting of an event sample {\tt{pwgevents.lhe}}
   In case of parallel run ({\tt{testrun-parallel}}), remember to
   analyse all produced event files and merge the obtained histograms.
   The analysis of multiple event files can be performed either by
-  specifying a number of event files following keyword {\tt{-event}}
+  specifying a number of event files following keyword {\tt{-events}}
   in the above example. Alternatively, analyse files separately and
   direct the output to various output files which can be specified
   using {\tt{-out}} keyword, for example
