--- a/directphoton/README
+++ b/directphoton/README
@@ -15,3 +15,11 @@ In order to run the directphoton code, we advise you to use the example director
 There is a README.mb and a script to help you with the generation of POWHEG level events (LHEF files).
 A second directory 'pythia_example' provides an example on how to apply the Pythia8 parton shower
 on the LHEF files.
+
+Big fixes:
+- 14/04/2020: the enhancedradfac feature was reported to work only with the old style reweighting 
+  (lhrwgt_). It has now been upgraded to work with the rwl_ reweightning (and only with rwl_ 
+  reweightning). Previously the sudakov weight due to enhancedradfac was reported as a separate weight. 
+  Now the <event> weight is the bare weight of the event and all the weights in the "<rwgt>" block are
+  already multiplied by this weight. As a consequence, at least one rwl_ weight must be requested during 
+  the `rwl_add 0` stage.
