--- a/W_ew-BMNNP/Docs/manual-BOX-WEW.tex
+++ b/W_ew-BMNNP/Docs/manual-BOX-WEW.tex
@@ -106,7 +106,7 @@ parameters specific to the $W$ implementation.
 To build the main \POWHEG{} executable, do: \\
 
 \noindent\tmtexttt{\$ cd POWHEG-BOX-V2/\DIR{} \\
-\$ make pwhg\_main }\\
+\$ make pwhg\_main~\footnote{Version 3812 or newer is working with POWHEG-BOX-V2 version 3812 or newer.} }\\
 
 Then do (for example) \\
 
