manual updated with footnote at pag. 1.
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3814 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Z_ew-BMNNPV/Docs/manual-BOX-ZEW.tex
+++ b/Z_ew-BMNNPV/Docs/manual-BOX-ZEW.tex
@@ -113,7 +113,7 @@ parameters specific to the $Z/\gamma^*$ implementation.
 Build the executable\\
 
 \noindent\tmtexttt{\$ cd POWHEG-BOX-V2/\DIR{} \\
-\$ make pwhg\_main }\\
+\$ make pwhg\_main~\footnote{Version 3812 or newer is working with POWHEG-BOX-V2 version 3812 or newer.} }\\
 
 Then do (for example) \\
 
